work on rashba and spelling corrections

--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -154,7 +154,7 @@ Minimizing with respect to $\delta \theta$ leads to
 	&\Leftrightarrow \nonumber\\
 	\delta \theta &= \frac{g\mu_b H \sin(\theta_L - \theta_H)}{2 \Jpar}.\nonumber
 \end{align}
-Inserting this expression for $\delta \theta$ back into Eq.~\ref{eq:GdMn2O5_zeeman_exp}, and keeping only the first order terms, we obtain the following expression for the gain in Zeeman energy when the spins cant:
+Inserting this expression for $\delta \theta$ back into Eq.~\eqref{eq:GdMn2O5_zeeman_exp}, and keeping only the first order terms, we obtain the following expression for the gain in Zeeman energy when the spins cant:
 \begin{align}
 	E_Z &= -\frac{g^2\mu_b^2 H^2 \sin(\theta_L - \theta_H)^2}{\Jpar} = -\frac{g^2\mu_b^2 H^2 \left(1 - \cos(\theta_L - \theta_H)^2\right)}{\Jpar} \nonumber\\
 	&=\frac{g^2\mu_b^2}{\Jpar}\left((\bm{H}\cdot\bm{L})^2 - H^2\right)\nonumber
@@ -175,7 +175,7 @@ Again minimizing this contribution in terms of $\delta \theta$, we find
 \begin{equation}
 	\delta \theta = \frac{\Jperp}{2 \Jpar} \sin(\theta_1 - \theta_2).
 \end{equation}
-Substituting $\delta \theta$ into Eq.~\ref{eq:GdMn2O5_Eic_exp}, while keeping only terms up to first order in $\frac{\Jperp^2}{\Jpar}$ since it is assumed that $\Jperp << \Jpar$, leads to the final expression for this energy contribution:
+Substituting $\delta \theta$ into Eq.~\eqref{eq:GdMn2O5_Eic_exp}, while keeping only terms up to first order in $\frac{\Jperp^2}{\Jpar}$ since it is assumed that $\Jperp << \Jpar$, leads to the final expression for this energy contribution:
 \begin{equation}
 	E_{ic} = -\frac{\Jperp^2}{\Jpar}\sin(\theta_1 - \theta_2)^2 =  \frac{\Jperp^2}{\Jpar}(\cos(\theta_1 - \theta_2) - 1) = \frac{\Jperp^2}{\Jpar}(\bm{L}_1 \cdot \bm{L}_2)^2 - \frac{\Jperp^2}{\Jpar},
 \end{equation}
