--- a/papers/Publications/Publications.tex
+++ b/papers/Publications/Publications.tex
@@ -23,7 +23,7 @@
 	\item[$\bullet$]
 	F. Fan, Z. Gao, {\bf Louis Ponet}, J. Wang, H. Huang, S. Artyukhin, J. Hong, S. Cheong, X. Wang\\
 	{\it Visualization of large-scale charged domain wall in hexagonal manganites}\\
-	Applied Physics Letters {\it under review}
+	Applied Physics Letters {\it accepted}
 	\item[$\bullet$]
 	{\bf Louis Ponet}, S. Artyukhin, Th. Kain, Anna Pimenov, A. Shuvaev, X. Wang, S. Cheong, M. Mostovoy, Andrei Pimenov\\
 	{\it Magnetoelectric Crankshaft}\\
@@ -31,5 +31,5 @@
 	\item[$\bullet$]
 	B. Dhanabalan, G. Biffi, A. Moliterni, V. Olieric, C. Giannini, G. Saleh, {\bf Louis Ponet}, M. Prato, M. Imran, L. Manna, R. Krahne, S. Artyukhin, M. P. Arciniegas\\
 	{\it Engineering the optical emission and robustness of metal-halide layered perovskites through ligand accommodation}\\
-	Advanced Materials {\it under review}
+	Advanced Materials {\it accepted}
 \end{itemize}
