--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -135,7 +135,7 @@ It is the interaction with the primary order parameter $L$ that provides the ``f
 While this sounds trivial, this concept is key to understand the observed physics.
 
 As mentioned before, the dynamics of $L$ is much faster than those of $y$.
-In writing down the Lagrangian of the system we therefore choose to take it to be always at its instantaneous minimum in the potential of Eq.~\ref{eq:Cr_landau}, characterized at each time by the value of $y$ and $T_L$.
+In writing down the Lagrangian of the system we therefore choose to take it to be always at its instantaneous minimum in the potential of Eq.~\eqref{eq:Cr_landau}, characterized at each time by the value of $y$ and $T_L$.
 This can be achieved by solving $\frac{\partial F}{\partial L} = 0$, leading to:
 \begin{equation}
 	\label{eq:Cr_L0}
@@ -154,13 +154,13 @@ with associated Euler-Lagrange equation for $y$:
     \frac{\partial \mathcal{L}}{\partial y} - \frac{d}{dt}\frac{\partial \mathcal{L}}{\partial \dot{y}} = \gamma_y \dot{y}
 \end{equation}
 where $\gamma_y$ denotes the damping parameter for $y$.
-Substituting Eq.~\ref{eq:Cr_landau} for $F$ leads to 
+Substituting Eq.~\eqref{eq:Cr_landau} for $F$ leads to 
 \begin{equation}
 	\label{eq:Cr_euler_lagrange}
 	    \rho y_0^2 \Ddot{y} = -\rho y_0^2 \omega_0^2 y  - b y^3 - \gamma_y \dot{y} + gL^2.
 \end{equation}
 This equation, together with Eqs.~\ref{eq:Cr_twotemp} describing the temperature evolution of the SDW ($T_L$) under influence of the optical pulses, fully describes the dynamics that are experimentally observed.
-One obvious remark can be made here: to be completely exact, the energy dissipated through the damping term $\gamma_y$ in Eq.~\ref{eq:Cr_euler_lagrange} should be absorbed into the phonon bath and thus influence $T_b$.
+One obvious remark can be made here: to be completely exact, the energy dissipated through the damping term $\gamma_y$ in Eq.~\eqref{eq:Cr_euler_lagrange} should be absorbed into the phonon bath and thus influence $T_b$.
 However, the case can be made that since this is only a single mode, its contribution to the heating of the bath will be negligible compared with the one due to the thermalization with all the electronic degrees of freedom.
 
 \section{Methods}
@@ -197,7 +197,7 @@ The results of this fitting procedure is shown in Fig.~\ref{fig:Cr_theoretical_f
 \end{figure}
 
 To get a deeper understanding of the underlying effect, we look at the evolution of the free energy surfaces for both order parameters, shown in Fig.~\ref{fig:Cr_energy_surfaces}.
-The characteristic double well potential for $L\neq0$ equilibrium is clearly visible, and as expected, when the pulses hit and $T_L$ increases in the term $\alpha(T_L-T_c)L^2$ of Eq.~\ref{eq:Cr_landau}, we see that the potential flattens causing the the minimum of $L$ to very quickly change, as discussed above.
+The characteristic double well potential for $L\neq0$ equilibrium is clearly visible, and as expected, when the pulses hit and $T_L$ increases in the term $\alpha(T_L-T_c)L^2$ of Eq.~\eqref{eq:Cr_landau}, we see that the potential flattens causing the the minimum of $L$ to very quickly change, as discussed above.
 This in turn causes the single-well potential of $y$ to shift as quickly.
 An oscillation of $y$ will occur due to its relatively slow dynamics, and instantaneous shift of its energy landscape as $L$ varies.
 While the temperature $T_L$ decreases again, $L$ and the minimum of the $y$ potential shift back towards their original equilibrium position.
@@ -211,7 +211,7 @@ Here, however, due to the relatively fast thermalization of the SDW with the bat
 This relative movement transfers additional momentum to $y$ as the SDW is cooling down and the potential is being restored, leading ultimately to a higher oscillation amplitude, even when only a single pulse is applied.
 This was observed experimentally in previous measurements by A. Singer's group and reported in Ref.~\cite{Singer2015prl}. 
 
-One final remark to make w.r.t. to the behavior after a single pulse, is that since it is the magnitude of $L$ which is the driver of the energy surface of $y$, the effect is most pronounced when $L$ is close to $T_c$ because a small change in temperature causes a large variation of the equilibrium position of $L$ as shown by the square root temperature dependence in Eq.~\ref{eq:Cr_L0}.    
+One final remark to make w.r.t. to the behavior after a single pulse, is that since it is the magnitude of $L$ which is the driver of the energy surface of $y$, the effect is most pronounced when $L$ is close to $T_c$ because a small change in temperature causes a large variation of the equilibrium position of $L$ as shown by the square root temperature dependence in Eq.~\eqref{eq:Cr_L0}.    
 
 Having multiple pulses that can rapidly change the potential surface for $y$ opens up many additional possibilities, allowing for additional constructive interference (Fig.~\ref{fig:Cr_theoretical_fit}(a-b)) or, by shifting the potential surface in the same direction as the movement of $y$, for a complete destructive interference (see Fig.~\ref{fig:Cr_theoretical_fit}(c-d)).
 This can be leveraged further by applying a train of pulses in order to guide the PLD oscillation along any desirable envelope function.
